[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Link/Normal/Left-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Link/Normal/Down-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Link/Normal/Up-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Link/Normal/Left-3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Link/Normal/Right-3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Link/Normal/Right-2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Link/Normal/Up-3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Link/Normal/Up-2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Link/Normal/Down-2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Link/Normal/Left-2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Link/Normal/Right-1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Link/Normal/Down-3.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Link/Link.gd" type="Script" id=13]
[ext_resource path="res://SoundEffects/LOZ_Link_Hurt.wav" type="AudioStream" id=14]
[ext_resource path="res://SoundEffects/LOZ_Sword_Slash.wav" type="AudioStream" id=15]
[ext_resource path="res://SoundEffects/LOZ_LowHealth.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "attack-down",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack-left",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "attack-right",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack-up",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle-down",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle-left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle-right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle-up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk-down",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk-left",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk-right",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk-up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Link" type="KinematicBody2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Weapon" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "attack-down"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="HurtSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="SlashSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="LowLifeSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[connection signal="is_touched_signal" from="." to="." method="_on_Link_is_touched_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
